Updated snoopy.html with more images

--- a/snoopy.html
+++ b/snoopy.html
@@ -1,3 +1,6 @@
 <center>
   <a href="/pic1.jpg"><img width="80%" src="/snoopy_love_letters.jpg"></a>
+  <a href="/pic1.jpg"><img width="80%" src="/snoopy_drivings.jpg"></a>
+  <a href="/pic1.jpg"><img width="80%" src="/snoopy_cherries.jpg"></a>
+  <a href="/pic1.jpg"><img width="80%" src="/snoopy_camera.jpg"></a>
 </center>
