Debugged snoopy.html

--- a/snoopy.html
+++ b/snoopy.html
@@ -1,6 +1,6 @@
 <center>
-  <a href="/snoopy_love_letters.jpg"><img width="80%" src="/snoopy_love_letters.jpg"></a>
-  <a href="/snoopy_driving.jpg"><img width="80%" src="/snoopy_driving.jpg"></a>
-  <a href="/snoopy_cherries.jpg"><img width="80%" src="/snoopy_cherries.jpg"></a>
-  <a href="snoopy_camera.jpg"><img width="80%" src="/snoopy_camera.jpg"></a>
+  <a href="/snoopy_love_letters.jpeg"><img width="80%" src="/snoopy_love_letters.jpeg"></a>
+  <a href="/snoopy_driving.jpeg"><img width="80%" src="/snoopy_driving.jpeg"></a>
+  <a href="/snoopy_cherries.jpeg"><img width="80%" src="/snoopy_cherries.jpeg"></a>
+  <a href="snoopy_camera.jpeg"><img width="80%" src="/snoopy_camera.jpeg"></a>
 </center>
