Replaced snoopy_cherries.jpeg with snoopy_icecream.jpeg

--- a/snoopy.html
+++ b/snoopy.html
@@ -1,6 +1,6 @@
 <center>
   <a href="/snoopy_love_letters.jpeg"><img width="60%" src="/snoopy_love_letters.jpeg"></a>
   <a href="/snoopy_driving.jpeg"><img width="60%" src="/snoopy_driving.jpeg"></a>
-  <a href="/snoopy_cherries.jpeg"><img width="60%" src="/snoopy_cherries.jpeg"></a>
+  <a href="/snoopy_icecream.jpeg"><img width="60%" src="/snoopy_icecream.jpeg"></a>
   <a href="/snoopy_camera.jpeg"><img width="60%" src="/snoopy_camera.jpeg"></a>
 </center>
