Added heading and caption

--- a/snoopy.html
+++ b/snoopy.html
@@ -1,6 +1,20 @@
-<center>
+<html>
+<head>
+  <title>Snoopy</title>
+</head>
+<body style="font-family: Verdana, sans-serif; margin-left: 10%; margin-right: 10%">
+
+  <h1>Snoopy</h1>
+
+  <p align="center">
+  Here are some pictures of Snoopy doing various activites!>
+  <center>
   <a href="/snoopy_love_letters.jpeg"><img width="60%" src="/snoopy_love_letters.jpeg"></a>
   <a href="/snoopy_driving.jpeg"><img width="60%" src="/snoopy_driving.jpeg"></a>
   <a href="/snoopy_icecream.jpeg"><img width="60%" src="/snoopy_icecream.jpeg"></a>
   <a href="/snoopy_camera.jpeg"><img width="60%" src="/snoopy_camera.jpeg"></a>
 </center>
+  </p>
+  
+</body>  
+</html>
