Updated alignment of caption

--- a/snoopy.html
+++ b/snoopy.html
@@ -6,8 +6,8 @@
 
   <h1>Snoopy</h1>
 
-  <p align="center">
-  Here are some pictures of Snoopy doing various activites!>
+  <p align="left">
+  Here are some pictures of Snoopy doing various activites!
   <center>
   <a href="/snoopy_love_letters.jpeg"><img width="60%" src="/snoopy_love_letters.jpeg"></a>
   <a href="/snoopy_driving.jpeg"><img width="60%" src="/snoopy_driving.jpeg"></a>
