Added to style to index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
   <title>My Favorite Web Page</title>
 </head>
 <body style="font-family: Verdana, sans-serif; margin-left: 10%; margin-right: 10%">
-
+  <div class = "Headerstyled_Container-sc-13am51g-0 jRvDs">
+      <div class = "Headerstyled_LeftSection-sc-13am51g-1 iHrZXC">
+          <a href="/" class="Logostyled__StyledLogo-sc-1f6bcsp-0 dtTBtT">Snoopy</a>
+        
   <h1>Welcome to My Web Page</h1>
 
   <p align="center">
