Updated index.html styling

--- a/index.html
+++ b/index.html
@@ -1,17 +1,32 @@
 <html>
 <head>
   <title>My Favorite Web Page</title>
+  <style>
+   body {
+     	background-color: #ffe3e3;
+    	border: 1px solid #616161;
+        padding-top: 10px;
+    	padding-bottom: 10px;
+    	padding-left: 15px;
+    	padding-right: 15px;
+    	margin-top: 25px;
+        margin-bottom: 25px;
+        margin-left: 25px;
+        margin-right: 25px;
+      }
+      h1{
+      	margin-top: 15px;
+        margin-left:10px;
+	}</style>
+    
 </head>
-<body style="font-family: Verdana, sans-serif; margin-left: 10%; margin-right: 10%">
-  <div class = "Headerstyled_Container-sc-13am51g-0 jRvDs">
-      <div class = "Headerstyled_LeftSection-sc-13am51g-1 iHrZXC">
-          <a href="/" class="Logostyled__StyledLogo-sc-1f6bcsp-0 dtTBtT">Snoopy</a>
-        
-  <h1>Welcome to My Web Page</h1>
+<body style="font-family: Courior New, monospace; color: #3c4443">    
+  <h1>welcome to my web page</h1>
 
   <p align="center">
-  This page is pretty boring now, <b>but <font size="+1">just <font size="+2">you <font color="#FF33CC">wait</font>!</font></font></b>
+  This page is pretty boring now, <b>but <font size="+1">just <font size="+2">you <font color="#ff75a8">wait</font>!</font></font></b>
   </p>
   
 </body>  
 </html>
+
