--- a/snoopy.html
+++ b/snoopy.html
@@ -1,13 +1,39 @@
 <html>
 <head>
   <title>Snoopy</title>
+  
+   <style>
+   body {
+     	background-color: #ffe3e3;
+    	border: 1px solid #616161;
+        padding-top: 10px;
+    	padding-bottom: 10px;
+    	padding-left: 15px;
+    	padding-right: 15px;
+    	margin-top: 25px;
+        margin-bottom: 25px;
+        margin-left: 25px;
+        margin-right: 25px;
+        
+      }
+      h1{
+      	margin-top: 15px;
+        margin-left:10px;
+	}</style>
+  
 </head>
-<body style="font-family: Verdana, sans-serif; margin-left: 10%; margin-right: 10%">
+<body style="font-family: Courior New, monospace; color: #3c4443">
 
   <h1>Snoopy</h1>
-
+  <hr width="100%" size="1" color="#3c4443">
+  <div align="right">
+    <a href="index.html">Index</a>
+    <hr width="100%" size="1" color="#3c4443">
+  </div>
+  
   <p align="left">
   Here are some pictures of Snoopy doing various activites!
+  
   <center>
   <a href="/snoopy_love_letters.jpeg"><img width="60%" src="/snoopy_love_letters.jpeg"></a>
   <a href="/snoopy_driving.jpeg"><img width="60%" src="/snoopy_driving.jpeg"></a>
