--- a/index.html
+++ b/index.html
@@ -22,11 +22,15 @@
 </head>
 <body style="font-family: Courior New, monospace; color: #3c4443">    
   <h1>welcome to my web page</h1>
+  <hr width="100%" size="1" color="#3c4443">
+  <div align="right">
+    <a href="snoopy.html">Snoopy</a>
+    <hr width="100%" size="1" color="#3c4443">
+  </div>
 
-  <p align="center">
+  <p align="left">
   This page is pretty boring now, <b>but <font size="+1">just <font size="+2">you <font color="#ff75a8">wait</font>!</font></font></b>
   </p>
   
 </body>  
 </html>
-
