Added more external links

--- a/index.html
+++ b/index.html
@@ -21,14 +21,23 @@
     
 </head>
 <body style="font-family: Courior New, monospace; color: #3c4443">    
-  <h1>welcome to my web page</h1>
+  
+  <div align="center">
+  	<h1>welcome to my web page
+  </div>
+  
+ 
   <hr width="100%" size="1" color="#3c4443">
-  <div align="right">
-    <a href="snoopy.html">Snoopy</a>
+  	<div align="center">
+  	<a href="snoopy.html">Snoopy</a>
+    &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+    <a href="https://www.peanuts.com/about/snoopy">Peanuts</a>
+    &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+    <a href="https://www.youtube.com/user/snoopy">YouTube</a>
     <hr width="100%" size="1" color="#3c4443">
   </div>
 
-  <p align="left">
+  <p align="center">
   This page is pretty boring now, <b>but <font size="+1">just <font size="+2">you <font color="#ff75a8">wait</font>!</font></font></b>
   </p>
   
