--- a/index.html
+++ b/index.html
@@ -38,8 +38,13 @@
   </div>
 
   <p align="center">
-  This page is pretty boring now, <b>but <font size="+1">just <font size="+2">you <font color="#ff75a8">wait</font>!</font></font></b>
-  </p>
-  
+  This page is dedicated to Snoopy. You can find pictures, videos, and a biography all about our four-legged friend. 
+    
+  <center>
+    <a href="/snoopy_index.png"><img width="60%" src="/snoopy_index.png"></a>
+  </center>
+    </p>
+
+
 </body>  
 </html>
