Adjusted image size and added extra spacing

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
       }
       h1{
       	margin-top: 15px;
-        margin-left:10px;
-	}</style>
+        margin-left:10px;}
+  </style>
     
 </head>
 <body style="font-family: Courior New, monospace; color: #3c4443">    
@@ -41,7 +41,8 @@
   This page is dedicated to Snoopy. You can find pictures, videos, and a biography all about our four-legged friend. 
     
   <center>
-    <a href="/snoopy_index.png"><img width="60%" src="/snoopy_index.png"></a>
+    <a href="/snoopy_index.png" style="display: block; margin-top: 20px;">
+      <img style="max-width: 100%; height: auto;" width="40%" src="/snoopy_index.png"></a>
   </center>
     </p>
 
