Added style sheet and simplified formatting across webpages

--- a/snoopy.html
+++ b/snoopy.html
@@ -2,33 +2,16 @@
 <head>
   <title>Snoopy</title>
   
-   <style>
-   body {
-     	background-color: #ffe3e3;
-    	border: 1px solid #616161;
-        padding-top: 10px;
-    	padding-bottom: 10px;
-    	padding-left: 15px;
-    	padding-right: 15px;
-    	margin-top: 25px;
-        margin-bottom: 25px;
-        margin-left: 25px;
-        margin-right: 25px;
-        
-      }
-      h1{
-      	margin-top: 15px;
-        margin-left:10px;
-	}</style>
+   <link rel="stylesheet" href="/style.css" type="text/css">
   
 </head>
 <body style="font-family: Courior New, monospace; color: #3c4443">
 
   <h1>Snoopy</h1>
-  <hr width="100%" size="1" color="#3c4443">
+  <hr>
   <div align="right">
     <a href="index.html">Index</a>
-    <hr width="100%" size="1" color="#3c4443">
+  </hr>
   </div>
   
   <p align="left">
