--- a/index.html
+++ b/index.html
@@ -1,40 +1,24 @@
 <html>
 <head>
   <title>My Favorite Web Page</title>
-  <style>
-   body {
-     	background-color: #ffe3e3;
-    	border: 1px solid #616161;
-        padding-top: 10px;
-    	padding-bottom: 10px;
-    	padding-left: 15px;
-    	padding-right: 15px;
-    	margin-top: 25px;
-        margin-bottom: 25px;
-        margin-left: 25px;
-        margin-right: 25px;
-      }
-      h1{
-      	margin-top: 15px;
-        margin-left:10px;}
-  </style>
+  <link rel="stylesheet" href="/style.css" type="text/css">
     
 </head>
-<body style="font-family: Courior New, monospace; color: #3c4443">    
+<body>    
   
   <div align="center">
   	<h1>welcome to my web page
   </div>
   
  
-  <hr width="100%" size="1" color="#3c4443">
+  <hr>
   	<div align="center">
   	<a href="snoopy.html">Snoopy</a>
     &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
     <a href="https://www.peanuts.com/about/snoopy">Peanuts</a>
     &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
     <a href="https://www.youtube.com/user/snoopy">YouTube</a>
-    <hr width="100%" size="1" color="#3c4443">
+    </hr>
   </div>
 
   <p align="center">
