reformatted styling again

--- a/index.html
+++ b/index.html
@@ -4,21 +4,21 @@
   <link rel="stylesheet" href="/style.css" type="text/css">
     
 </head>
-<body>    
+<body style="font-family: Courior New, monospace; color: #3c4443">    
   
   <div align="center">
   	<h1>welcome to my web page
   </div>
   
  
-  <hr>
+  <hr width="100%" size="1" color="#3c4443">
   	<div align="center">
   	<a href="snoopy.html">Snoopy</a>
     &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
     <a href="https://www.peanuts.com/about/snoopy">Peanuts</a>
     &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
     <a href="https://www.youtube.com/user/snoopy">YouTube</a>
-    </hr>
+    <hr width="100%" size="1" color="#3c4443">
   </div>
 
   <p align="center">
