--- a/snoopy.html
+++ b/snoopy.html
@@ -8,10 +8,10 @@
 <body style="font-family: Courior New, monospace; color: #3c4443">
 
   <h1>Snoopy</h1>
-  <hr>
+  <hr width="100%" size="1" color="#3c4443">
   <div align="right">
     <a href="index.html">Index</a>
-  </hr>
+    <hr width="100%" size="1" color="#3c4443">
   </div>
   
   <p align="left">
