--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <a href="https://www.peanuts.com/about/snoopy">Peanuts</a>
     &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
     <a href="https://www.youtube.com/user/snoopy">YouTube</a>
+    &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
     <a href="jsboom.html">Snoopy's Countdown</a>
     <hr width="100%" size="1" color="#3c4443">
   </div>
