--- a/jsboom.html
+++ b/jsboom.html
@@ -7,7 +7,7 @@
       </head>
 <body style="font-family: Courior New, monospace; color: #3c4443">
 
-        <h1>Snoopy</h1>
+        <h1>Snoopy's Countdown</h1>
         <hr width="100%" size="1" color="#3c4443">
         <div align="right">
           <a href="index.html">Index</a>
@@ -35,7 +35,6 @@
                     container.style.display = "flex";
                     container.style.justifyContent = "center";
                     container.style.alignItems = "center";
-                    container.style.height = "100vh";
                 
                     container.appendChild(imageElement);
 
