added new button to jsboom page

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body style="font-family: Courior New, monospace; color: #3c4443">    
   
   <div align="center">
-  	<h1>welcome to my web pageeeeee
+  	<h1>welcome to my web page
   </div>
   
  
