edit to image carousel

--- a/snoopy.html
+++ b/snoopy.html
@@ -25,7 +25,8 @@
       "/snoopy_love_letters.jpeg",
       "/snoopy_driving.jpeg",
       "/snoopy_icecream.jpeg",
-      "/snoopy_camera.jpeg"
+      "/snoopy_camera.jpeg",
+      "/snoopyski.png"
     ];
 
     var currentIndex = 0;
