edit 2 to dark mode

--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
   <style>
     .dark-mode {
       background-color: #222;
+    }
+    .dark-mode body {
       color: #ffe3e3;
     }
   </style>
