edit 3 to dark mode

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     .dark-mode {
       background-color: #222;
     }
-    .dark-mode body {
+    .dark-mode * {
       color: #ffe3e3;
     }
   </style>
