edit 5 to dark mode

--- a/index.html
+++ b/index.html
@@ -51,6 +51,12 @@
     .dark-mode * {
       color: #ffe3e3;
     }
+    .dark-mode h1 {
+      color: white;
+    }
+    .dark-mode hr {
+      color: white;
+    }
   </style>
 
 </body>  
