--- a/index.html
+++ b/index.html
@@ -50,13 +50,14 @@
     }
     .dark-mode * {
       color: #ffe3e3;
-    }
-    .dark-mode h1 {
-      color: white;
+      border: 1px solid white;
     }
     .dark-mode hr {
-      color: white;
-    }
+  border-color: white;
+  width: "100%";
+  size: "1";
+}
+
   </style>
 
 </body>  
