edit 7 to dark mode

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body style="font-family: Courior New, monospace; color: #3c4443">    
   
   <div align="center">
-  	<h1>welcome to my web page</h1> <!-- Added missing closing tag -->
+  	<h1>welcome to my web page</h1>
   </div>
   
  
@@ -50,14 +50,16 @@
     }
     .dark-mode * {
       color: #ffe3e3;
-      border: 1px solid white;
     }
     .dark-mode hr {
-  border-color: white;
-  width: "100%";
-  size: "1";
+  border-color: #ffffff;
 }
 
+.dark-mode body {
+  border-color: #ffffff;
+  border-style: solid; 
+  border-width: 1px;
+}
   </style>
 
 </body>  
