edit 9 to dark mode

--- a/index.html
+++ b/index.html
@@ -57,6 +57,10 @@
     .dark-mode hr {
   border-color: #ffffff;
 }
+.dark-mode button {
+  color: black; /* Change button font color to white in dark mode */
+}
+
   </style>
 
 </body>  
