last edit to dark mode

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   border-color: #ffffff;
 }
 .dark-mode button {
-  color: black; /* Change button font color to white in dark mode */
+  color: black;
 }
 
   </style>
