--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </p>
 
   <div align="center">
-    <button onclick="toggleMode()">Toggle (Light/Dark) Mode</button>
+    <button onclick="toggleMode()">Light/Dark Mode</button>
   </div>
 
   <script>
