Update quote button label

--- a/jsboom.html
+++ b/jsboom.html
@@ -18,7 +18,7 @@
         <button onclick="updateCount()">Next</button>
 
     
-        <button onclick="toggleQuote()">Toggle Quote</button>
+        <button onclick="toggleQuote()">Quotes by Charles Schulz</button>
         <div id="quoteContainer" style="display: none;">
             <p id="quote"></p>
         </div>
