--- a/index.html
+++ b/index.html
@@ -61,11 +61,13 @@
         color: black;
       }
   
-      /* Styling for dark mode button container */
       .dark-mode-button-container {
         position: fixed;
         bottom: 20px;
         right: 20px;
+      }
+      .dark-mode button {
+      padding: 10px 20px; 
       }
     </style>
 
