--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
         right: 20px;
       }
       .dark-mode button {
-      padding: 10px 20px; 
+      margin-right: 20px;
+      margin-bottom: 20px; 
       }
     </style>
 
