added ai generated photo to carousel

--- a/snoopy.html
+++ b/snoopy.html
@@ -26,7 +26,8 @@
       "/snoopy_driving.jpeg",
       "/snoopy_icecream.jpeg",
       "/snoopy_camera.jpeg",
-      "/snoopyski.png"
+      "/snoopyski.png",
+      "/snoopybakes.png"
     ];
 
     var currentIndex = 0;
